environments/dev/cluster-addons/monitoring/ingress-alertmanager.yaml
---
# Alertmanager Ingress
# Exposes Alertmanager UI via NGINX ingress controller
# URL: https://pkalertmanager.plt-dev.inteleradhealth.com
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: kube-prometheus-stack
  annotations:
    # Cert-manager will automatically provision TLS certificate
    cert-manager.io/cluster-issuer: "letsencrypt-prod-dns"
    # External-DNS will create Route53 record
    external-dns.alpha.kubernetes.io/hostname: pkalertmanager.plt-dev.inteleradhealth.com
    # NGINX ingress annotations
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pkalertmanager.plt-dev.inteleradhealth.com
    secretName: alertmanager-tls
  rules:
  - host: pkalertmanager.plt-dev.inteleradhealth.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-alertmanager
            port:
              number: 9093
