environments/dev/cluster-addons/monitoring/ingress-prometheus.yaml
---
# Prometheus Ingress
# Exposes Prometheus UI via NGINX ingress controller
# URL: https://pkprometheus.plt-dev.inteleradhealth.com
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: kube-prometheus-stack
  annotations:
    # Cert-manager will automatically provision TLS certificate
    cert-manager.io/cluster-issuer: "letsencrypt-prod-dns"
    # External-DNS will create Route53 record
    external-dns.alpha.kubernetes.io/hostname: pkprometheus.plt-dev.inteleradhealth.com
    # NGINX ingress annotations
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pkprometheus.plt-dev.inteleradhealth.com
    secretName: prometheus-tls
  rules:
  - host: pkprometheus.plt-dev.inteleradhealth.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
